fix paddings, gap

--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #d1d5dc;
+  background-color: #131b29;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
